--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,10 +1,8 @@
+name: CI
+
 on:
   push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+    branches: [ "master" ]
 
 jobs:
   deploy:
@@ -19,6 +17,7 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           port: 22
           script: |
+# TODO add GitHub Runner
             ls
             eval "$(ssh-agent -s)"
             ssh-add ~/.ssh/for_github_pulling
