--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,3 +29,23 @@ jobs:
 #           docker compose rm -f
 #           docker compose pull
 #           docker compose up -d
+  lint:
+    # Name the Job
+    name: Lint code base
+    # Set the type of machine to run on
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ 3.9 ]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+
+      - name: Install dependencies
+        run: |
+          pip install poetry
+          make package-install
+      - name: Lint
+        run: make lint
