--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Svennson17 <kiryl.shvedau@gmail.com>"]
 python = "^3.9"
 Django = "^4.1.4"
 psycopg2 = "^2.9.5"
+flake8 = "^6.0.0"
 
 [tool.poetry.dev-dependencies]
 
