feat: update test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install poetry
-          make package-install
+          poetry install
+#          make package-install
       - name: Lint
         run: make lint
