feat: update test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,8 @@ jobs:
       - name: Install dependencies
         run: |
           pip install poetry
-          poetry install
-#          make package-install
+          cd backend
+#          poetry install
+          make package-install
       - name: Lint
         run: make lint
