--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Install dependencies
         run: |
           pip install poetry
+          cd backend
           make package-install
       - name: Lint
-        run: make lint
+        run: |
+          cd backend
+          make lint
