--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 Django = "^4.1.4"
 psycopg2 = "^2.9.5"
 flake8 = "^6.0.0"
+djangorestframework = "^3.14.0"
 
 [tool.poetry.dev-dependencies]
 
