--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,11 +5,35 @@ on:
     branches: [ "master" ]
 
 jobs:
+  push_dockers:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log in to Docker Hub
+        uses: docker/login-action
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Backend Docker image
+        run: |
+          ls
+          cd backend
+          docker build . --tag titanmen/bit2.one_backend:latest
+          docker push titanmen/bit2.one_backend:latest 
+
+      - name: Build and push Nginx Docker image
+        run: |
+          ls
+          cd deploy/nginx
+          docker build . --tag titanmen/bit2.one_nginx:latest
+          docker push titanmen/bit2.one_nginx:latest 
+
   deploy:
+    needs: [lint, push_dockers]
     runs-on: ubuntu-latest
 
     steps:
-      - name: Deploy to VPS via SSH action
+      - name: ReUp dockers to VPS via SSH action
         uses: appleboy/ssh-action@v0.1.3
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -25,14 +49,9 @@ jobs:
             cd deploy
             docker compose stop
             docker compose up -d
-#           docker compose stop
-#           docker compose rm -f
-#           docker compose pull
-#           docker compose up -d
+
   lint:
-    # Name the Job
     name: Lint code base
-    # Set the type of machine to run on
     runs-on: ubuntu-latest
     strategy:
       matrix:
