--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,8 @@ psycopg2 = "^2.9.5"
 flake8 = "^6.0.0"
 djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.2.2"
+gunicorn = "^20.1.0"
+python-dotenv = "^0.21.1"
 
 [tool.poetry.dev-dependencies]
 
