--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,12 +14,19 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Backend Docker image
-        run: |
-          ls
-          cd backend
-          docker build . --tag titanmen/bit2.one_backend:latest
-          docker push titanmen/bit2.one_backend:latest 
+#      - name: Build and push Backend Docker image
+#       run: |
+#          ls
+#          cd backend
+#          docker build . --tag titanmen/bit2.one_backend:latest
+#          docker push titanmen/bit2.one_backend:latest
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: ./backend/
+          push: true
+          tags: titanmen/bit2.one_backend:latest
+
 
       - name: Build and push Nginx Docker image
         run: |
