--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,32 +8,25 @@ jobs:
   push_dockers:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-#      - name: Build and push Backend Docker image
-#       run: |
-#          ls
-#          cd backend
-#          docker build . --tag titanmen/bit2.one_backend:latest
-#          docker push titanmen/bit2.one_backend:latest
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: ./backend/
-          push: true
-          tags: titanmen/bit2.one_backend:latest
-
+      - name: Build and push Backend Docker image
+        run: |
+          cd backend
+          docker build . --tag titanmen/bit2.one_backend:latest
+          docker push titanmen/bit2.one_backend:latest
 
       - name: Build and push Nginx Docker image
         run: |
-          ls
           cd deploy/nginx
           docker build . --tag titanmen/bit2.one_nginx:latest
-          docker push titanmen/bit2.one_nginx:latest 
+          docker push titanmen/bit2.one_nginx:latest
 
   deploy:
     needs: [lint, push_dockers]
