feat: update host

--- a/backend/.env.local
+++ b/backend/.env.local
@@ -3,6 +3,7 @@ SECRET_KEY=django-insecure-=pi%1)^$&@u4!(+iodacf)9s1ac%5iw%1$n#gg%y%mohpk@44y
 DATABASE_NAME=backend
 DATABASE_USER=admin
 DATABASE_PASSWORD=admin
-DATABASE_HOST=postgres
+DATABASE_HOST=localhost
 DATABASE_PORT=5432
-HOST_NAME=89.108.102.187
+HOST_NAME=localhost
+HOST_PORT=8000
