--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.2.2"
 gunicorn = "^20.1.0"
 python-dotenv = "^0.21.1"
+qrcode = "^7.4.1"
 
 [tool.poetry.dev-dependencies]
 
